projeto com erro no innerjoin

--- a/Backend2/Api-Join/package.json
+++ b/Backend2/Api-Join/package.json
@@ -4,13 +4,12 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/node": "^8.10.66",
-    "ts-node": "3.3.0",
+    "ts-node": "^3.3.0",
     "typescript": "3.3.3333"
   },
   "dependencies": {
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
-    "mysql": "^2.14.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41"
